--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
     "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-query-devtools": "^5.24.0",
     "@trpc/client": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
     "@trpc/server": "^10.45.1",
@@ -25,6 +24,7 @@
     "next-video": "^0.14.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.14.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
