--- a/package.json
+++ b/package.json
@@ -3,30 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & npx next-video sync -w",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:introspect": "drizzle-kit introspect:pg"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
+    "@neondatabase/serverless": "^0.8.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
     "@trpc/server": "^10.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "dotenv-cli": "^7.3.0",
     "drizzle-orm": "^0.29.3",
     "lucide-react": "^0.335.0",
+    "media-chrome": "^2.2.5",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
-    "next-video": "^0.14.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.14.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "youtube-video-element": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
