--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "youtube-video-element": "^1.0.0"
+    "youtube-video-element": "^1.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
