--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/drizzle-adapter": "^0.7.0",
     "@neondatabase/serverless": "^0.8.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
@@ -30,7 +31,6 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "youtube-video-element": "^1.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
